Fix extra space between 2 pre elements

--- a/src/styles/_ide.scss
+++ b/src/styles/_ide.scss
@@ -64,6 +64,7 @@ $code-color-error: #FF4444;
         box-shadow: none;
         color: inherit;
         padding: 0px;
+        margin: 0px;
         white-space: pre-wrap;
       }
 
